--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 .photo-border {
-    border: 4px solid #4f46e5; /* Indigo-600 */
+    border: 4px solid; /*#4f46e5 Indigo-600 */
 }
 
 .typed-cursor {
