--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -12,6 +12,7 @@
     --color-indigo-700: oklch(45.7% 0.24 277.023);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-300: oklch(87.2% 0.01 258.338);
+    --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-900: oklch(21% 0.034 264.665);
     --color-black: #000;
     --color-white: #fff;
@@ -264,8 +265,8 @@
   .items-center {
     align-items: center;
   }
-  .justify-end {
-    justify-content: flex-end;
+  .justify-center {
+    justify-content: center;
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
@@ -329,14 +330,14 @@
   .bg-gray-50 {
     background-color: var(--color-gray-50);
   }
+  .bg-gray-500 {
+    background-color: var(--color-gray-500);
+  }
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
   }
-  .bg-\[url\(\'assets\/images\/Horizon\.jpg\'\)\] {
-    background-image: url('assets/images/Horizon.jpg');
-  }
-  .bg-\[url\(\'assets\/images\/your-background\.jpg\'\)\] {
-    background-image: url('assets/images/your-background.jpg');
+  .bg-\[url\(\'\.\.\/\/assets\/images\/Horizon\.jpg\'\)\] {
+    background-image: url('..//assets/images/Horizon.jpg');
   }
   .bg-cover {
     background-size: cover;
@@ -355,6 +356,9 @@
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
   }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
@@ -377,10 +381,6 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
-  }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
   .text-4xl {
     font-size: var(--text-4xl);
@@ -519,7 +519,7 @@
   }
 }
 .photo-border {
-  border: 4px solid #4f46e5;
+  border: 4px solid;
 }
 .typed-cursor {
   font-size: inherit;
