--- a/css/output.css
+++ b/css/output.css
@@ -233,14 +233,17 @@
   .inline {
     display: inline;
   }
-  .inline-block {
-    display: inline-block;
+  .inline-flex {
+    display: inline-flex;
   }
   .table {
     display: table;
   }
   .h-2 {
     height: calc(var(--spacing) * 2);
+  }
+  .h-4 {
+    height: calc(var(--spacing) * 4);
   }
   .h-12 {
     height: calc(var(--spacing) * 12);
@@ -250,6 +253,9 @@
   }
   .min-h-screen {
     min-height: 100vh;
+  }
+  .w-4 {
+    width: calc(var(--spacing) * 4);
   }
   .w-44 {
     width: calc(var(--spacing) * 44);
@@ -337,29 +343,20 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-\[\#fa5c5c\] {
+    border-color: #fa5c5c;
+  }
   .border-black {
     border-color: var(--color-black);
   }
   .border-red-500 {
     border-color: var(--color-red-500);
   }
-  .border-white {
-    border-color: var(--color-white);
+  .bg-\[\#fa5c5c\] {
+    background-color: #fa5c5c;
   }
   .bg-black {
     background-color: var(--color-black);
-  }
-  .bg-black\/22 {
-    background-color: color-mix(in srgb, #000 22%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-black) 22%, transparent);
-    }
-  }
-  .bg-black\/24 {
-    background-color: color-mix(in srgb, #000 24%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-black) 24%, transparent);
-    }
   }
   .bg-black\/30 {
     background-color: color-mix(in srgb, #000 30%, transparent);
@@ -409,20 +406,8 @@
   .text-center {
     text-align: center;
   }
-  .align-middle {
-    vertical-align: middle;
-  }
-  .align-super {
-    vertical-align: super;
-  }
   .align-text-bottom {
     vertical-align: text-bottom;
-  }
-  .align-text-top {
-    vertical-align: text-top;
-  }
-  .align-top {
-    vertical-align: top;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -459,6 +444,9 @@
   .whitespace-nowrap {
     white-space: nowrap;
   }
+  .text-\[\#fa5c5c\] {
+    color: #fa5c5c;
+  }
   .text-gray-300 {
     color: var(--color-gray-300);
   }
@@ -493,24 +481,17 @@
       }
     }
   }
-  .hover\:border-black {
-    &:hover {
-      @media (hover: hover) {
-        border-color: var(--color-black);
-      }
-    }
-  }
-  .hover\:border-red-500 {
-    &:hover {
-      @media (hover: hover) {
-        border-color: var(--color-red-500);
-      }
-    }
-  }
   .hover\:border-white {
     &:hover {
       @media (hover: hover) {
         border-color: var(--color-white);
+      }
+    }
+  }
+  .hover\:bg-\[\#fa5c5c\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #fa5c5c;
       }
     }
   }
@@ -589,17 +570,17 @@
 .photo-border {
   border: 3px solid;
 }
-.copyRightDiv {
+.standard-screen-size {
   display: block;
 }
-.smallCopyRightDiv {
+.small-screen-size {
   display: none;
 }
-@media (max-width: 350px) {
-  .copyRightDiv {
+@media (max-width: 420px) {
+  .standard-screen-size {
     display: none;
   }
-  .smallCopyRightDiv {
+  .small-screen-size {
     display: block;
   }
 }
