--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+html, body {
+  background: transparent;
+  margin: 0;
+  min-height: 100vh; /* Make sure body fills full viewport height */
+}
+
 .font-roboto {
   font-family: 'Roboto', sans-serif;
 }
