--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 @import "tailwindcss";
 
 html, body {
-  background: transparent;
-  margin: 0;
-  min-height: 100vh; /* Make sure body fills full viewport height */
+  background-color: #000;
+  /* margin: 0;
+  padding: 0; */
+  /* height: 100%;
+  min-height: 100vh; */
 }
 
 .font-roboto {
