--- a/css/output.css
+++ b/css/output.css
@@ -180,6 +180,9 @@
   }
 }
 @layer utilities {
+  .pointer-events-none {
+    pointer-events: none;
+  }
   .absolute {
     position: absolute;
   }
@@ -201,29 +204,20 @@
   .right-4 {
     right: calc(var(--spacing) * 4);
   }
-  .-z-10 {
-    z-index: calc(10 * -1);
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
   }
-  .-z-20 {
-    z-index: calc(20 * -1);
-  }
-  .z-0 {
-    z-index: 0;
-  }
-  .z-1 {
-    z-index: 1;
-  }
-  .z-2 {
-    z-index: 2;
-  }
-  .z-3 {
-    z-index: 3;
+  .left-0 {
+    left: calc(var(--spacing) * 0);
   }
   .z-10 {
     z-index: 10;
   }
-  .z-50 {
-    z-index: 50;
+  .z-20 {
+    z-index: 20;
+  }
+  .z-30 {
+    z-index: 30;
   }
   .container {
     width: 100%;
@@ -294,8 +288,14 @@
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
+  .h-40 {
+    height: calc(var(--spacing) * 40);
+  }
   .h-44 {
     height: calc(var(--spacing) * 44);
+  }
+  .h-\[100vh\] {
+    height: 100vh;
   }
   .max-h-0 {
     max-height: calc(var(--spacing) * 0);
